--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
+
 </head>
 <body>
-    <h1>About Page!</h1>
-    <img src="/img/me.jpg" />
+    
+    <h1>{{title}}</h1>
+    <p>Create by {{name}}</p>
+
 </body>
+
 </html>
