--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>{{title}}</h1>
-    <img src="/img/me.jpg" />
-    <p>Created by {{name}}</p>
+    {{>header}}
+    <p>This is {{message}}</p>
+    {{>footer}}
 </body>
 </html>
