--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
+
 </head>
 <body>
-    <h1>{{title}}</h1>
-    <p>This is {{message}}</p>
+    
+    {{>header}}
+    {{>footer}}
 
 </body>
+
 </html>
