--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
+        <title>404</title>
+        <link rel="icon" href="/img/weather.png">
         <link rel="stylesheet" href="/css/styles.css">
-    </header>
+    </head>
     <body>
-        {{>header}}
-        <p>{{errorMessage}}</p>
+        <div class="main-content">
+            {{>header}}
+            <p>{{errorMessage}}</p>
+        </div>
+        
         {{>footer}}
     </body>
 </html>
