--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -16,10 +16,12 @@
             <input placeholder="Location">
             <button>Search</button>
         </form>
+        <p id = "message-1"></p>
+        <p id = "message-2"></p>
     </div>    
     
     {{>footer}}
-    
+
     <script src="/js/app.js"></script>
 </body>
 
